Setup/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  annotations:
    kubernetes.io/ingresss.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingresss.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: airflow-webserver
          servicePort: 8080
        path: /(.*)
